Fix setting inputAlign to right does not work in h5 (#182)

--- a/packages/core/src/field/field.scss
+++ b/packages/core/src/field/field.scss
@@ -112,7 +112,9 @@
       text-align: center;
     }
 
-    &--right {
+    &--right,
+    &--right input,
+    &--right textarea{
       justify-content: flex-end;
       text-align: right;
     }
